--- a/app/src/main/res/layout/activity_lanavigator_start.xml
+++ b/app/src/main/res/layout/activity_lanavigator_start.xml
@@ -15,8 +15,25 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_toRightOf="@+id/relativeLayout"
-        android:layout_toEndOf="@+id/relativeLayout" />
+        android:layout_toRightOf="@+id/activity_main_swipe_refresh_layout"
+        android:layout_toEndOf="@+id/activity_main_swipe_refresh_layout" />
+
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/activity_main_swipe_refresh_layout"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content" >
+        <ListView
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/listView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_above="@+id/relativeLayout"
+            />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <Button
         android:layout_width="wrap_content"
@@ -24,6 +41,8 @@
         android:text="My location"
         android:id="@+id/myLoc"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_toRightOf="@+id/activity_main_swipe_refresh_layout"
+        android:layout_toEndOf="@+id/activity_main_swipe_refresh_layout" />
+
+
 </RelativeLayout>
